// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays a custom error when a child component throws an error 1`] = `
Array [
  <Text>
    Happy Child
  </Text>,
  <View>
    <Image />
    <Text>
      Custom Error Message
    </Text>
  </View>,
]
`;

exports[`displays an error when a child component throws an error 1`] = `
<View>
  <Text>
    Oops. Something Went Wrong
  </Text>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/Axel_Fretting.png",
      }
    }
  />
  <View
    accessibilityRole="button"
    accessibilityState={Object {}}
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <View>
      <Text>
        Restart Hylo
      </Text>
    </View>
  </View>
</View>
`;

exports[`matches last snapshot 1`] = `
<Text>
  Happy Child
</Text>
`;
